--- a/parroquiaproject/sitio/templates/inicio.html
+++ b/parroquiaproject/sitio/templates/inicio.html
@@ -51,8 +51,10 @@
   <!-- Título Noticias -->
   <h2>
     Noticias & Anuncios
-    <button class="btn btn-warning mt-2 mt-sm-0 float-end" data-bs-toggle="collapse" data-bs-target="#formNoticia">
-      ➕ Publicar
+    <button class="btn btn-success mt-2 mt-sm-0 float-end" data-bs-toggle="collapse" data-bs-target="#formNoticia">
+      <svg xmlns="http://www.w3.org/2000/svg" width="19" height="19" fill="currentColor" class="bi bi-plus-lg" viewBox="0 1 16 16">
+        <path fill-rule="evenodd" d="M8 2a.5.5 0 0 1 .5.5v5h5a.5.5 0 0 1 0 1h-5v5a.5.5 0 0 1-1 0v-5h-5a.5.5 0 0 1 0-1h5v-5A.5.5 0 0 1 8 2"/>
+      </svg> Nuevo
     </button>
   </h2>
 
@@ -85,7 +87,7 @@
           <!-- Acciones -->
           <div class="d-flex gap-2">
             <!-- Editar -->
-            <button class="btn btn-sm btn-primary"
+            <button class="btn btn-sm btn-warning" style="color: white;"
                     data-bs-toggle="modal"
                     data-bs-target="#editarNoticia{{ noticia.id }}">
               <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-pencil-square" viewBox="0 0 17 17">
