--- a/parroquiaproject/sitio/templates/horarios.html
+++ b/parroquiaproject/sitio/templates/horarios.html
@@ -11,8 +11,10 @@
 <div class="container my-4">
     <h2>
         Lista de Actividades
-        <button class="btn btn-warning mt-2 mt-sm-0 float-end" data-bs-toggle="collapse">
-            ➕ Añadir
+        <button class="btn btn-success mt-2 mt-sm-0 float-end" data-bs-toggle="collapse">
+            <svg xmlns="http://www.w3.org/2000/svg" width="19" height="19" fill="currentColor" class="bi bi-plus-lg" viewBox="0 1 16 16">
+        <path fill-rule="evenodd" d="M8 2a.5.5 0 0 1 .5.5v5h5a.5.5 0 0 1 0 1h-5v5a.5.5 0 0 1-1 0v-5h-5a.5.5 0 0 1 0-1h5v-5A.5.5 0 0 1 8 2"/>
+            </svg> Nuevo    
         </button>
     </h2>
 
@@ -51,6 +53,10 @@
         </select>
 
         <button type="submit" class="btn btn-primary btn-sm">🔍 Filtrar</button>
+
+        {% if filtros.dia or filtros.categoria or filtros.parroquia %}
+        <a href="." class="btn btn-danger btn-sm">🗑️ Borrar Filtro</a>
+        {% endif %}
     </form>
 
     <!-- Accordion de actividades -->
