--- a/parroquiaproject/sitio/templates/actividades.html
+++ b/parroquiaproject/sitio/templates/actividades.html
@@ -11,8 +11,10 @@
 <div class="container-sm my-4">
     <h2>
         Actividades Vigentes
-        <button class="btn btn-warning mt-2 mt-sm-0 float-end" data-bs-toggle="collapse">
-            ➕ Añadir
+        <button class="btn btn-success mt-2 mt-sm-0 float-end" data-bs-toggle="collapse">
+            <svg xmlns="http://www.w3.org/2000/svg" width="19" height="19" fill="currentColor" class="bi bi-plus-lg" viewBox="0 1 16 16">
+        <path fill-rule="evenodd" d="M8 2a.5.5 0 0 1 .5.5v5h5a.5.5 0 0 1 0 1h-5v5a.5.5 0 0 1-1 0v-5h-5a.5.5 0 0 1 0-1h5v-5A.5.5 0 0 1 8 2"/>
+            </svg> Nuevo    
         </button>
     </h2>
     <div class="row mb-2">
