--- a/parroquiaproject/sitio/templates/dashboard.html
+++ b/parroquiaproject/sitio/templates/dashboard.html
@@ -30,13 +30,20 @@
         </a>
         {% endif %}
 
+        <button class="btn btn-success mt-2 mt-sm-0 float-end ms-2" onclick="window.location.href='/check_post/'">
+            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-clipboard2-fill" viewBox="0 0 16 16">
+            <path d="M9.5 0a.5.5 0 0 1 .5.5.5.5 0 0 0 .5.5.5.5 0 0 1 .5.5V2a.5.5 0 0 1-.5.5h-5A.5.5 0 0 1 5 2v-.5a.5.5 0 0 1 .5-.5.5.5 0 0 0 .5-.5.5.5 0 0 1 .5-.5z"/>
+            <path d="M3.5 1h.585A1.5 1.5 0 0 0 4 1.5V2a1.5 1.5 0 0 0 1.5 1.5h5A1.5 1.5 0 0 0 12 2v-.5q-.001-.264-.085-.5h.585A1.5 1.5 0 0 1 14 2.5v12a1.5 1.5 0 0 1-1.5 1.5h-9A1.5 1.5 0 0 1 2 14.5v-12A1.5 1.5 0 0 1 3.5 1"/>
+            </svg>
+        </button>
+
         <button class="btn btn-secondary mt-2 mt-sm-0 float-end" onclick="window.location.href='/configuracion/'">
             <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-gear-fill" viewBox="0 0 16 16">
             <path d="M9.405 1.05c-.413-1.4-2.397-1.4-2.81 0l-.1.34a1.464 1.464 0 0 1-2.105.872l-.31-.17c-1.283-.698-2.686.705-1.987 1.987l.169.311c.446.82.023 1.841-.872 2.105l-.34.1c-1.4.413-1.4 2.397 0 2.81l.34.1a1.464 1.464 0 0 1 .872 2.105l-.17.31c-.698 1.283.705 2.686 1.987 1.987l.311-.169a1.464 1.464 0 0 1 2.105.872l.1.34c.413 1.4 2.397 1.4 2.81 0l.1-.34a1.464 1.464 0 0 1 2.105-.872l.31.17c1.283.698 2.686-.705 1.987-1.987l-.169-.311a1.464 1.464 0 0 1 .872-2.105l.34-.1c1.4-.413 1.4-2.397 0-2.81l-.34-.1a1.464 1.464 0 0 1-.872-2.105l.17-.31c.698-1.283-.705-2.686-1.987-1.987l-.311.169a1.464 1.464 0 0 1-2.105-.872zM8 10.93a2.929 2.929 0 1 1 0-5.86 2.929 2.929 0 0 1 0 5.858z"/>
             </svg>
         </button>
     </h2>
-    <p>En esta sección puedes ver tus suscripciones:</p>
+    <p>Aquí puedes visualizar tu información personal y realizar ajustes en tus credenciales de usuario</p>
 
     <!-- Mis Iglesias Suscriptas -->
     <div class="card mb-4 shadow-sm">
@@ -72,11 +79,27 @@
         </div>
     </div>
 
+    <!-- Admin de Iglesias -->
+    {% if admin_iglesias %}
+    <div class="card mb-4 shadow-sm">
+        <div class="card-header bg-secondary text-white">
+            <h4 class="mb-0">Iglesias bajo mi administración</h4>
+        </div>
+        <div class="card-body">
+            <ul class="list-group list-group-flush">
+                {% for iglesia in admin_iglesias %}
+                    <li class="list-group-item">{{ iglesia.nombre }}</li>
+                {% endfor %}
+            </ul>
+        </div>
+    </div>
+    {% endif %}
+
     <!-- Permisos de Iglesias -->
     {% if permisos_iglesias %}
     <div class="card mb-4 shadow-sm">
         <div class="card-header bg-warning text-dark">
-            <h4 class="mb-0">Permisos de Edición</h4>
+            <h4 class="mb-0">Iglesias con acceso de edición</h4>
         </div>
         <div class="card-body">
             <ul class="list-group list-group-flush">
@@ -91,7 +114,7 @@
     <!-- Actividades relacionadas -->
     <div class="card mb-4 shadow-sm">
         <div class="card-header bg-success text-white">
-            <h4 class="mb-0">Actividades relacionadas</h4>
+            <h4 class="mb-0">Actividades en mis iglesias suscriptas</h4>
         </div>
         <div class="card-body">
             {% if actividades %}
