--- a/parroquiaproject/sitio/templates/inicio.html
+++ b/parroquiaproject/sitio/templates/inicio.html
@@ -52,10 +52,10 @@
   <h2>
     Noticias & Anuncios
     {% if user.is_authenticated %}
-    <button class="btn btn-success mt-2 mt-sm-0 float-end" data-bs-toggle="modal" data-bs-target="#formNoticia">
+    <button class="btn btn-success mt-2 mt-sm-0 float-end" title="Nueva Publicacion" data-bs-toggle="modal" data-bs-target="#formNoticia">
       <svg xmlns="http://www.w3.org/2000/svg" width="19" height="19" fill="currentColor" class="bi bi-plus-lg" viewBox="0 1 16 16">
         <path fill-rule="evenodd" d="M8 2a.5.5 0 0 1 .5.5v5h5a.5.5 0 0 1 0 1h-5v5a.5.5 0 0 1-1 0v-5h-5a.5.5 0 0 1 0-1h5v-5A.5.5 0 0 1 8 2"/>
-      </svg> Nuevo
+      </svg>
     </button>
     {% endif %}
   </h2>
@@ -103,7 +103,8 @@
             <!-- Editar -->
             <button class="btn btn-sm btn-warning" style="color: white;"
                     data-bs-toggle="modal"
-                    data-bs-target="#editarNoticia{{ noticia.id }}">
+                    data-bs-target="#editarNoticia{{ noticia.id }}"
+                    title="Editar">
               <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-pencil-square" viewBox="0 0 17 17">
                 <path d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z"/>
                 <path fill-rule="evenodd" d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5z"/>
@@ -114,7 +115,7 @@
               {% csrf_token %}
               <input type="hidden" name="action" value="eliminar">
               <input type="hidden" name="noticia_id" value="{{ noticia.id }}">
-              <button type="submit" class="btn btn-sm btn-danger"
+              <button type="submit" class="btn btn-sm btn-danger" title="Eliminar"
                       onclick="return confirm('¿Seguro que deseas eliminar esta publicación?')">
                 <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-trash3-fill" viewBox="0 0 17 17">
                   <path d="M11 1.5v1h3.5a.5.5 0 0 1 0 1h-.538l-.853 10.66A2 2 0 0 1 11.115 16h-6.23a2 2 0 0 1-1.994-1.84L2.038 3.5H1.5a.5.5 0 0 1 0-1H5v-1A1.5 1.5 0 0 1 6.5 0h3A1.5 1.5 0 0 1 11 1.5m-5 0v1h4v-1a.5.5 0 0 0-.5-.5h-3a.5.5 0 0 0-.5.5M4.5 5.029l.5 8.5a.5.5 0 1 0 .998-.06l-.5-8.5a.5.5 0 1 0-.998.06m6.53-.528a.5.5 0 0 0-.528.47l-.5 8.5a.5.5 0 0 0 .998.058l.5-8.5a.5.5 0 0 0-.47-.528M8 4.5a.5.5 0 0 0-.5.5v8.5a.5.5 0 0 0 1 0V5a.5.5 0 0 0-.5-.5"/>
@@ -128,15 +129,19 @@
         <!-- Imagen noticia -->
         <div class="col-auto d-none d-lg-block">
           {% if noticia.imagen %}
-            <img src="{{ noticia.imagen.url }}" alt="{{ noticia.titulo }}"
-                 class="img-fluid mb-3"
-                 style="max-height: 300px; width: 200px; height: 100%; object-fit: cover;">
+            <a href="{{ noticia.imagen.url }}" 
+              data-lightbox="noticias" 
+              data-title="{{ noticia.titulo }}">
+              <img src="{{ noticia.imagen.url }}" alt="{{ noticia.titulo }}"
+                  class="img-fluid mb-3"
+                  style="max-height: 300px; width: 200px; height: 100%; object-fit: cover; cursor:pointer;">
+            </a>
           {% else %}
             <svg aria-label="Placeholder: Thumbnail"
-                 class="bd-placeholder-img"
-                 width="200" height="300"
-                 preserveAspectRatio="xMidYMid slice"
-                 role="img" xmlns="http://www.w3.org/2000/svg">
+                class="bd-placeholder-img"
+                width="200" height="300"
+                preserveAspectRatio="xMidYMid slice"
+                role="img" xmlns="http://www.w3.org/2000/svg">
               <title>Placeholder</title>
               <rect width="100%" height="100%" fill="#55595c"></rect>
               <text x="30%" y="50%" fill="#eceeef" dy=".3em">Sin Imagen</text>
