--- a/parroquiaproject/sitio/templates/check_post.html
+++ b/parroquiaproject/sitio/templates/check_post.html
@@ -7,7 +7,7 @@
 
 {% block content %}
     <h2 
-        class="mb-3">Publicaciones pendientes
+        class="mb-3">Gestión de Publicaciones
     </h2>
     <p>Aquí puedes visualizar las publicaciones que se deberían autorizar</p>
 
@@ -24,15 +24,12 @@
             </ul>
         </div>
     </div>
-<div class="container mt-4">
-    <h2 
-        class="mb-3">Mis publicaciones
-    </h2>
+    
     <p>Aquí puedes visualizar el estado de tus publicaciones (aprobado, rechazado o pendiente)</p>
 
     <!-- Mis Post Estado -->
     <div class="card mb-4 shadow-sm">
-        <div class="card-header bg-secondary text-white">
+        <div class="card-header bg-primary text-white">
             <h4 class="mb-0">Estado de mis publicaciones</h4>
         </div>
         <div class="card-body">
