--- a/parroquiaproject/sitio/templates/configuracion.html
+++ b/parroquiaproject/sitio/templates/configuracion.html
@@ -1,11 +1,19 @@
 {% extends "base.html" %}
 {% load widget_tweaks %}
+{% load static %}
+
+{% block head %}
+<link rel="stylesheet" href="{% static 'css/styles.css' %}">
+{% endblock %}
 
 {% block title %}Configuración{% endblock %}
 
 {% block content %}
-<div class="card card-body shadow-sm w-100">
-    <h4>Configuración de Cuenta</h4>
+    <h2 
+        class="mb-3">Configuración de Cuenta
+    </h2>
+<div class="card card-body shadow-sm w-100" style="background-color: #E8E3D0;">
+    <h4>Tus creedenciales de usuario</h4>
     
     <!-- Usuario -->
     <p></p>
