Update Inicio (descripcion & fecha)

--- a/parroquiaproject/static/css/styles.css
+++ b/parroquiaproject/static/css/styles.css
@@ -138,3 +138,9 @@
 .lightbox:target {
   display: flex;
 }
+
+.descripcion {
+  white-space: normal; /* Permite saltos de línea */
+  word-wrap: break-word; /* Corta palabras largas */
+  overflow-wrap: anywhere; /* Maneja palabras demasiado largas */
+}
