Update Iglesias - Add boton + solo para superuser - Update crear collapse por modal

--- a/parroquiaproject/sitio/templates/iglesias.html
+++ b/parroquiaproject/sitio/templates/iglesias.html
@@ -11,11 +11,13 @@
 <div class="container mt-4">
   <h2>
     Iglesias
-    <button class="btn btn-success mt-2 mt-sm-0 float-end" title="Nueva Iglesia" data-bs-toggle="collapse" data-bs-target="#formIglesia">
+    {% if request.user.is_superuser %}
+    <button class="btn btn-success mt-2 mt-sm-0 float-end" title="Nueva Iglesia" data-bs-toggle="modal" data-bs-target="#formIglesiaModal">
       <svg xmlns="http://www.w3.org/2000/svg" width="19" height="19" fill="currentColor" class="bi bi-plus-lg" viewBox="0 1 16 16">
         <path fill-rule="evenodd" d="M8 2a.5.5 0 0 1 .5.5v5h5a.5.5 0 0 1 0 1h-5v5a.5.5 0 0 1-1 0v-5h-5a.5.5 0 0 1 0-1h5v-5A.5.5 0 0 1 8 2"/>
       </svg>
     </button>
+    {% endif %}
   </h2>
 
   <!-- FORMULARIO AÑADIR IGLESIA -->
@@ -100,6 +102,29 @@
       </div>
     </div>
 
+    <!-- MODAL NUEVA IGLESIA -->
+    <div class="modal fade" id="formIglesiaModal" tabindex="-1" aria-labelledby="formIglesiaLabel" aria-hidden="true">
+      <div class="modal-dialog modal-lg modal-dialog-centered">
+        <div class="modal-content" style="background-color: #E8E3D0;">
+          <div class="modal-header">
+            <h5 class="modal-title" id="formIglesiaLabel">Nueva Iglesia</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar"></button>
+          </div>
+          <div class="modal-body">
+            <form method="post" enctype="multipart/form-data" id="formCrearIglesia">
+              {% csrf_token %}
+              <input type="hidden" name="action" value="crear">
+              {{ form.as_p }}
+            </form>
+          </div>
+          <div class="modal-footer">
+            <button type="submit" class="btn btn-success w-100" form="formCrearIglesia">Añadir</button>
+            <button type="button" class="btn btn-secondary w-100" data-bs-dismiss="modal">Cancelar</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <!-- MODAL EDITAR IGLESIA -->
     <div class="modal fade" id="editarIglesia{{ iglesia.id }}" tabindex="-1" aria-hidden="true">
       <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
@@ -109,12 +134,12 @@
             <input type="hidden" name="action" value="editar">
             <input type="hidden" name="iglesia_id" value="{{ iglesia.id }}">
 
-            <div class="modal-header">
+            <div class="modal-header" style="background-color: #E8E3D0;">
               <h5 class="modal-title">Editar Iglesia</h5>
               <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar"></button>
             </div>
 
-            <div class="modal-body">
+            <div class="modal-body" style="background-color: #E8E3D0;">
               <div class="mb-3">
                 <label class="form-label">Nombre</label>
                 <input type="text" name="nombre" class="form-control" value="{{ iglesia.nombre }}" required>
@@ -134,7 +159,7 @@
               </div>
             </div>
 
-            <div class="modal-footer flex-column gap-2">
+            <div class="modal-footer flex-column gap-2" style="background-color: #E8E3D0;">
               <button type="submit" class="btn btn-success w-100">Guardar cambios</button>
               <button type="button" class="btn btn-secondary w-100" data-bs-dismiss="modal">Cancelar</button>
             </div>
