--- a/parroquiaproject/sitio/templates/horarios.html
+++ b/parroquiaproject/sitio/templates/horarios.html
@@ -8,7 +8,7 @@
 {% endblock %}
 
 {% block content %}
-<div class="container my-4">
+<div >
     <h2>
         Lista de Actividades
         <button class="btn btn-success mt-2 mt-sm-0 float-end" title="Nueva Actividad" data-bs-toggle="collapse">
