--- a/parroquiaproject/sitio/templates/actividades.html
+++ b/parroquiaproject/sitio/templates/actividades.html
@@ -8,7 +8,7 @@
 {% endblock %}
 
 {% block content %}
-<div class="container-sm my-4">
+<div >
     <h2>
         Actividades Vigentes
         <button class="btn btn-success mt-2 mt-sm-0 float-end" title="Nueva Actividad" data-bs-toggle="collapse">
