--- a/parroquiaproject/sitio/templates/dashboard.html
+++ b/parroquiaproject/sitio/templates/dashboard.html
@@ -6,7 +6,7 @@
 {% endblock %}
 
 {% block content %}
-<div class="container mt-4">
+<div>
     <h2 
         class="mb-3">Bienvenido, {{ user.username }} 👋 
 
