--- a/parroquiaproject/sitio/templates/iglesias.html
+++ b/parroquiaproject/sitio/templates/iglesias.html
@@ -8,7 +8,7 @@
 {% endblock %}
 
 {% block content %}
-<div class="container mt-4">
+<div >
   <h2>
     Iglesias
     {% if request.user.is_superuser %}
